kubernetes/app-s3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-s3-deployment
  namespace: app-s3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-s3
  template:
    metadata:
      labels:
        app: app-s3
    spec:
      # Vinculamos la ServiceAccount con los permisos IAM
      serviceAccountName: app-s3-service-account
      
      # 1. Contenedor de Inicialización (Corre antes del Nginx principal)
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        # Montamos la misma carpeta compartida. Nginx servirá el index.html descargado por el initContainer
        - name: shared-web-directory
          mountPath: /usr/share/nginx/html
          
      volumes:
      # Un volumen temporal en memoria (emptyDir) que comparten ambos contenedores
      - name: shared-web-directory
        emptyDir: {}
