kubernetes/app-s3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-s3-service
  namespace: app-s3
spec:
  type: ClusterIP
  selector:
    app: app-s3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
